MTX-151
* Implemented Extract.