@@ -1,9 +1,6 @@
 package com.sentrysoftware.matrix.converter.state.computes.extract;
 
-import java.util.Collections;
 import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import com.sentrysoftware.matrix.converter.state.IConnectorStateConverter;
 import com.sentrysoftware.matrix.converter.state.computes.common.ColumnProcessor;
@@ -15,10 +12,15 @@ import lombok.NoArgsConstructor;
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class ConnectorExtractProperty {
 
-	private static final String HDF_TYPE_VALUE = "";
-	private static final String YAML_TYPE_VALUE = "";
+	private static final String HDF_TYPE_VALUE = "Extract";
+	private static final String YAML_TYPE_VALUE = "extract";
 
 	public static Set<IConnectorStateConverter> getConnectorProperties() {
-		return Collections.emptySet();
+		return Set.of(
+			new ComputeTypeProcessor(HDF_TYPE_VALUE, YAML_TYPE_VALUE),
+			new ColumnProcessor(),
+			new SubColumnProcessor(),
+			new SubSeparatorsProcessor()
+		);
 	}
 }
